tests/neg-custom-args/captures/vars-simple.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:15:9 -----------------------------------
15 |    a = (g: String => String)      // error
   |         ^^^^^^^^^^^^^^^^^^^
   |         Found:    String ->{any} String
   |         Required: String ->{cap1, cap2} String
   |
   |         Note that capability `any` is not included in capture set {cap1, cap2}.
   |
   |         where:    any is a root capability created in method scope
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:16:8 -----------------------------------
16 |    a = g  // error
   |        ^
   |        Found:    (x: String) ->{cap3} String
   |        Required: String ->{cap1, cap2} String
   |
   |        Note that capability `cap3` is not included in capture set {cap1, cap2}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars-simple.scala:17:12 ----------------------------------
17 |    b = List(g) // error
   |        ^^^^^^^
   |        Found:    List[String ->{cap3} String]
   |        Required: List[String ->{cap1, cap2} String]
   |
   |        Note that capability `cap3` is not included in capture set {cap1, cap2}.
   |
   | longer explanation available when compiling with `-explain`
